--- a/.github/workflows/commits.yml
+++ b/.github/workflows/commits.yml
@@ -9,5 +9,6 @@ jobs:
     name: Conventional Commits
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: ubiquity/action-conventional-commits@v1.1.2
+      name: Check commit messages
+      run: |
+        yes 2>/dev/null | npx tsx ./src/main.ts
