--- a/.github/workflows/commits.yml
+++ b/.github/workflows/commits.yml
@@ -9,6 +9,17 @@ jobs:
     name: Conventional Commits
     runs-on: ubuntu-latest
     steps:
-      - run: |
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Check commits
+        run: |
           ls
-          
