--- a/action.yml
+++ b/action.yml
@@ -1,23 +1,9 @@
-name: Conventional Commits
-on:
-  pull_request:
-  push:
-jobs:
-  build:
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Run Shell Command
-        run: |
-          echo "This is a shell command."
-
-      - name: Run Node.js Script
-        uses: actions/setup-node@v2
-        with:
-          node-version: '16'
-        run: |
-          npm install
-          node src/index.js
+name: "Conventional Commits"
+description: "Ensures that all commit messages are following the conventional-commits standard."
+inputs:
+  GITHUB_TOKEN:
+    description: 'GitHub token'
+    required: false
+runs:
+  using: node16
+  main: src/main.ts
