--- a/action.yml
+++ b/action.yml
@@ -6,4 +6,9 @@ inputs:
     required: false
 runs:
   using: node16
-  main: src/index.js
+  steps:
+    - name: Download reference report
+      if: github.event_name == 'pull_request'
+      run: |
+        echo "Pacea"
+      shell: bash
